fix: append tenantid to agency search response